StyledSelect works with Form, column editing in board settings mostly working

--- a/src/components/UI/BoardComponents/Card/CardEditor.scss
+++ b/src/components/UI/BoardComponents/Card/CardEditor.scss
@@ -2,6 +2,10 @@
   height: 100%;
   margin: 10px;
 
+  #input-container {
+    padding: 0;
+  }
+
   #editor-title {
     font-weight: 500;
     flex-grow: 1;
