Split out some stylesheets, button styling changes

--- a/src/components/UI/PageComponents/Form/StyledSelect.scss
+++ b/src/components/UI/PageComponents/Form/StyledSelect.scss
@@ -7,7 +7,7 @@
     cursor: default;
   }
   outline: none;
-  background: var(--text-bg-color);
+  background: var(--button-color);
   font-size: 19px;
   padding: 5px;
   width: 200px;
