--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -1,6 +1,6 @@
 #boards-content {
   .board {
-    border: 1px solid var(--landing-border);
+    border: 1px solid var(--menu-border);
     font-size: 1em;
     margin: 1em;
     padding: 0 1em;
@@ -11,15 +11,12 @@
       padding: 0.5em;
     }
     .board-icon {
-      border: 1px solid black;
       display: flex;
       align-items: center;
       justify-content: center;
       min-width: 10px;
       max-width: 10px;
       max-height: 10px;
-      box-shadow: var(--bg-shadow);
-      border: 1px solid var(--landing-border);
       font-size: 3em;
     }
     .board-info {
@@ -32,19 +29,6 @@
     }
   }
   .new-board {
-    padding: 1em 0 0 1em;
-    button {
-      border: 1px solid var(--landing-border);
-      padding: 10px 20px;
-      border-radius: 5px 20px;
-      cursor: pointer;
-      font-weight: 700;
-      color: var(--text-color);
-      background-color: var(--button-color);
-      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
-      &:focus {
-        outline: 0;
-      }
-    }
+    margin: 1em;
   }
 }
