--- a/src/components/UI/Modal/index.scss
+++ b/src/components/UI/Modal/index.scss
@@ -24,11 +24,11 @@
   background: var(--modal-bg-color);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
-  svg:not(.secondary) {
+  svg:not([color] .secondary) {
     color: var(--icon-primary-color);
   }
 
-  svg:not([color] .secondary) {
+  svg:not([color]).secondary {
     color: var(--icon-secondary-color);
   }
   .modal-header {
