--- a/src/Button.scss
+++ b/src/Button.scss
@@ -7,9 +7,11 @@ button {
   border: none;
   outline: none;
   padding: 10px 16px;
+  &.sm {
+    padding: 7px 12px;
+  }
   border-radius: 3px;
   color: var(--text-color);
-  padding: 10px 16px;
   font-size: 1em;
   font-weight: bold;
   cursor: pointer;
