--- a/src/components/UI/BoardComponents/Settings/index.scss
+++ b/src/components/UI/BoardComponents/Settings/index.scss
@@ -9,7 +9,7 @@
   #section-content {
     margin-bottom: 10px;
   }
-  #input-container {
+  .input-container {
     padding-top: 5px;
     padding-bottom: 5px;
   }
