--- a/src/components/UI/BoardComponents/Settings/index.scss
+++ b/src/components/UI/BoardComponents/Settings/index.scss
@@ -13,4 +13,16 @@
     padding-top: 5px;
     padding-bottom: 5px;
   }
+  .add-column {
+    margin: 8px;
+    display: flex;
+  }
+  .tags-list {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    button {
+      margin: 0px 10px;
+    }
+  }
 }
