Tag settings fully working

--- a/src/components/UI/BoardComponents/Settings/index.scss
+++ b/src/components/UI/BoardComponents/Settings/index.scss
@@ -21,8 +21,9 @@
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
-    button {
-      margin: 0px 10px;
+    .tag {
+      margin-top: auto;
+      margin-bottom: auto;
     }
   }
 }
