Board settings responsive changes

--- a/src/components/UI/PageComponents/Form/Form.scss
+++ b/src/components/UI/PageComponents/Form/Form.scss
@@ -9,6 +9,9 @@
     font-size: inherit;
     outline: none;
     height: 19px;
+    &.grow{
+      width: 100%;
+    }
   }
   .input-field:focus {
     border-color: var(--login-input-focus);
