--- a/src/index.scss
+++ b/src/index.scss
@@ -82,6 +82,10 @@ body {
     display: flex;
   }
 
+  .wrap {
+    flex-wrap: wrap;
+  }
+
   .center {
     justify-content: center;
     align-items: center;
