--- a/src/components/UI/PageComponents/Form/StyledSelect.scss
+++ b/src/components/UI/PageComponents/Form/StyledSelect.scss
@@ -12,6 +12,11 @@
   padding: 5px;
   width: 200px;
 }
+.input-container.grow {
+  .styled-select {
+    width: 100%;
+  }
+}
 .styled-select {
   select,
   div {
