--- a/src/components/UI/AddComponents/AddTag/components/SelectTag/index.scss
+++ b/src/components/UI/AddComponents/AddTag/components/SelectTag/index.scss
@@ -25,6 +25,9 @@
         cursor: pointer;
         .tags-label {
           margin: 0 10px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
         }
       }
       .tags-edit-label {
