--- a/src/components/UI/BoardComponents/Settings/index.scss
+++ b/src/components/UI/BoardComponents/Settings/index.scss
@@ -17,6 +17,11 @@
     .tag {
       margin-top: auto;
       margin-bottom: auto;
+      display: flex;
+      flex-grow: 1;
     }
+  }
+  .tag-button-group {
+    justify-content: flex-end;
   }
 }
