--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Lato", sans-serif;
+  color: var(--text-color);
   input,
   select,
   textarea {
