Consistent section styling, user badge on cards, confirmation cleanup, roles on landing page

--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -1,15 +1,6 @@
-#boards-content {
-  padding: 10px;
+.boards-content {
   .board {
-    border: 1px solid var(--menu-border);
-    font-size: 1em;
-    margin: 1em 0;
-    padding: 0 1em;
-    box-shadow: var(--bg-shadow);
     align-items: center;
-    &:last-child {
-      margin-bottom: 0;
-    }
     .board-icon,
     .board-info {
       padding: 0.5em;
