--- a/src/Button.scss
+++ b/src/Button.scss
@@ -6,13 +6,14 @@ body {
 button {
   border: none;
   outline: none;
+  margin: 8px;
   padding: 10px 16px;
   &.sm {
     padding: 7px 12px;
   }
   border-radius: 3px;
   color: var(--text-color);
-  font-size: 1em;
+  font-size: 16px;
   font-weight: bold;
   cursor: pointer;
   box-shadow: 1px 1px 2px #00000050;
