--- a/src/components/UI/PageComponents/ButtonGroup/index.scss
+++ b/src/components/UI/PageComponents/ButtonGroup/index.scss
@@ -1,11 +1,17 @@
 .button-group {
   display: flex;
-  margin: 8px 0px;
+  &:not(.fitted) {
+    margin: 8px;
+  }
   button {
     &:not(.sm) {
       flex-grow: 1;
       flex-basis: 0;
     }
-    margin: 0px 8px;
+    margin: 0;
+    margin-right: 8px;
+    &:last-child {
+      margin: 0;
+    }
   }
 }
