--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -6,7 +6,6 @@
     margin: 1em 0;
     padding: 0 1em;
     box-shadow: var(--bg-shadow);
-    align-items: center;
     &:last-child {
       margin-bottom: 0;
     }
@@ -27,9 +26,17 @@
       div {
         text-align: left;
       }
-      .board-title {
+      .title {
         font-size: 1.5em;
       }
+      justify-content: space-between;
+      align-items: center;
+    }
+    .board-title {
+    }
+    .board-content {
+      margin-left: 10px;
+      flex-direction: column;
     }
   }
 }
