Update Accordion Component to expose title click functionality.

--- a/src/index.scss
+++ b/src/index.scss
@@ -141,6 +141,10 @@ body {
     box-shadow: var(--card-shadow);
   }
 
+  .cursor-pointer {
+    cursor: pointer;
+  }
+
   --bg-primary: #eef1f5;
   --bg-navbar: var(--card-primary);
   --navbar-text-color: var(--text-color);
