--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -15,7 +15,7 @@
     }
     .board-info {
       div {
-        text-align: left;
+        text-align: right;
       }
       .title {
         font-size: 1.5em;
