--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -20,4 +20,21 @@
       }
     }
   }
+  .table {
+    .table-container {
+      margin: 5px;
+      box-shadow: var(--bg-shadow);
+    }
+    .table-header,
+    .table-content {
+      padding: 10px;
+    }
+    .table-header {
+      width: 20%;
+    }
+    .table-content {
+      padding-left: 20px;
+      border-left: 1px solid var(--card-border);
+    }
+  }
 }
