--- a/src/index.scss
+++ b/src/index.scss
@@ -149,6 +149,10 @@ body {
     cursor: pointer;
   }
 
+  .bold {
+    font-weight: 700;
+  }
+
   --bg-primary: #eef1f5;
   --bg-navbar: var(--card-primary);
   --navbar-text-color: var(--text-color);
