--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -10,6 +10,12 @@
       justify-content: center;
       font-size: 2em;
     }
+    .content-header {
+      a {
+        margin: 8px;
+        margin-top: auto;
+      }
+    }
     a {
       width: fit-content;
     }
