--- a/src/Toast.scss
+++ b/src/Toast.scss
@@ -1,28 +1,19 @@
 .toast-success {
-  background: var(--toast-success-bg-color);
-  color: var(--toast-success-text-color);
-}
-.toast-success-progress {
-  background: var(--toast-success-progress-color);
+  background: var(--success-color);
+  color: #fff;
 }
 .toast-error {
-  background: var(--toast-error-bg-color);
-  color: var(--toast-error-text-color);
-}
-.toast-error-progress {
-  background: var(--toast-error-progress-color);
+  background: var(--danger-color);
+  color: #fff;
 }
 .toast-warn {
-  background: var(--toast-warn-bg-color);
-  color: var(--toast-warn-text-color);
-}
-.toast-warn-progress {
-  background: var(--toast-warn-progress-color);
+  background: var(--warning-color);
+  color: #fff;
 }
 .toast-info {
-  background: var(--toast-info-bg-color);
-  color: var(--toast-info-text-color);
+  background: var(--info-color);
+  color: #fff;
 }
-.toast-info-progress {
-  background: var(--toast-info-progress-color);
+.toast-progress {
+  background: var(--toast-progress-color);
 }
