--- a/src/components/Pages/Landing/content/Boards.scss
+++ b/src/components/Pages/Landing/content/Boards.scss
@@ -12,8 +12,7 @@
     }
     .content-header {
       a {
-        margin: 8px;
-        margin-top: auto;
+        margin: 3px 8px 8px 8px;
       }
     }
     a {
@@ -25,6 +24,9 @@
         text-align: left;
       }
     }
+    .details {
+      min-width: 6em;
+    }
   }
   .table {
     .table-container {
@@ -33,14 +35,33 @@
     }
     .table-header,
     .table-content {
-      padding: 10px;
+      padding: 10px 10px 10px 20px;
     }
     .table-header {
-      width: 20%;
+      min-width: 30%;
+      max-width: 30%;
+      flex-basis: auto;
+      flex-grow: 1;
     }
     .table-content {
-      padding-left: 20px;
+      max-width: 70%;
+      flex-basis: auto;
+      flex-grow: 1;
+      flex-wrap: wrap;
+      word-break: break-all;
       border-left: 1px solid var(--card-border);
+    }
+    @media only screen and (max-width: 500px) {
+      .table-container {
+        flex-direction: column;
+      }
+      .table-content {
+        border-top: 1px solid var(--card-border);
+      }
+      .table-header,
+      .table-content {
+        max-width: 100%;
+      }
     }
   }
 }
