Fix bug in column header shadow

--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -18,7 +18,6 @@
 
   .column-header {
     border-radius: 5px 5px 0 0;
-    box-shadow: 0 0 3px 0 rgba(0, 1, 0, 0.32);
     background-color: var(--column-primary);
     padding: 8px;
     margin: 0 0 0 0;
@@ -49,6 +48,8 @@
   }
 
   #column-droppable {
+    // TODO: Switch shadow vars to color only, size should be fixed
+    box-shadow: 0 6px 6px -6px rgba(98, 98, 102, 0.32) inset;
     transition: background-color 0.2s ease;
     overflow: hidden auto;
     flex-grow: 1;
