--- a/src/components/UI/AddComponents/AddTag/components/SelectTag/index.scss
+++ b/src/components/UI/AddComponents/AddTag/components/SelectTag/index.scss
@@ -1,4 +1,4 @@
-#select-tag {
+.select-tag {
   .tags-ul {
     max-height: 350px;
     list-style-type: none;
@@ -11,29 +11,10 @@
     overflow-y: auto;
     li {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       width: 100%;
-      .tags-li-container {
-        color: #fff;
-        width: 75%;
-        margin-left: 6%;
-        height: 25px;
-        padding: 5px;
-        justify-content: space-between;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        .tags-label {
-          margin: 0 10px;
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
-        }
-      }
-      .tags-edit-label {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      .tag {
+        margin: 5px;
       }
 
       &:hover {
@@ -49,7 +30,7 @@
       &:not(:hover) .tags-edit-label {
         visibility: hidden;
         opacity: 0;
-        width: 0%;
+        // width: 0%;
       }
     }
   }
