--- a/src/components/DND/DND.scss
+++ b/src/components/DND/DND.scss
@@ -3,4 +3,5 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   // -webkit-user-drag: none;
   -webkit-touch-callout: none;
+  touch-action: manipulation;
 }
