Switch shadow variables to use a base color

--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -49,7 +49,7 @@
 
   .column-droppable {
     // TODO: Switch shadow vars to color only, size should be fixed
-    box-shadow: 0 6px 6px -6px rgba(98, 98, 102, 0.32) inset;
+    box-shadow: 0 6px 6px -6px var(--shadow-color) inset;
     transition: background-color 0.2s ease;
     overflow: hidden auto;
     flex-grow: 1;
