--- a/src/index.scss
+++ b/src/index.scss
@@ -151,15 +151,16 @@ body {
   --bg-navbar: var(--card-primary);
   --navbar-text-color: var(--text-color);
   --modal-bg-color: var(--card-primary);
-  --bg-shadow: 0px 0px 13px 0px rgba(98, 98, 102, 0.24);
+  --shadow-color: rgba(0, 0, 0, 0.14);
+  --bg-shadow: 0px 0px 13px 0px var(--shadow-color);
   --card-border: lightgrey;
   --card-primary: #ffffff;
   --card-hover: #e6e6e6;
-  --card-shadow: 0 0 3px 0 rgba(0, 1, 0, 0.32);
+  --card-shadow: 0 0 3px 0 var(--shadow-color);
   --column-hover: var(--card-hover);
   --column-primary: var(--bg-navbar);
   --column-secondary: var(--bg-primary);
-  --column-shadow: 0px 0px 6px 0px rgba(98, 98, 102, 0.32);
+  --column-shadow: 0px 0px 6px 0px var(--shadow-color);
   --text-color: black;
   --icon-primary-color: black;
   --icon-secondary-color: #72767b;
