--- a/src/Button.scss
+++ b/src/Button.scss
@@ -26,7 +26,7 @@ button {
     font-weight: bold;
   }
   cursor: pointer;
-  box-shadow: 1px 1px 2px #e4cdcd50;
+  box-shadow: var(--card-shadow);
   background-color: var(--button-color);
 
   border: 1px solid var(--card-border);
