--- a/src/components/UI/BoardComponents/Tags/index.scss
+++ b/src/components/UI/BoardComponents/Tags/index.scss
@@ -6,15 +6,15 @@
   align-content: center;
 }
 .tag {
-  border-radius: 1em;
+  border-radius: .3em;
   margin: 5px 5px 5px 0;
   display: flex;
   align-items: center;
   height: fit-content;
   font-size: 12px;
   height: 15px;
-  padding: 3px 5px;
-  min-width: 75px;
+  padding: 3px 0px;
+  cursor: default;
   &.lg {
     font-size: 19px;
     height: 30px;
@@ -26,7 +26,7 @@
   justify-content: center;
   color: #fff;
   .inner-tag {
-    padding: 10px;
+    padding: 3px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
