--- a/src/components/UI/MarkdownEditor/MarkdownEditor.scss
+++ b/src/components/UI/MarkdownEditor/MarkdownEditor.scss
@@ -16,6 +16,31 @@
   word-break: break-word;
 }
 
+.checkmark {
+  margin: 4px;
+  margin-left: -20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  display: inline-block;
+  background-color: #eee;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  .check {
+    display: block;
+    position: relative;
+    left: 6px;
+    top: 2px;
+    width: 3px;
+    height: 7px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+}
+
 .markdown-preview > :last-child {
   margin-bottom: 0;
 }
